Made build cross-platform