@@ -14,81 +14,23 @@
     <name>editor-package</name>
     <url>http://maven.apache.org</url>
 
-    <!--
-<profiles>
-    <profile>
-        <id>osx</id>
-        <activation>
-            <os>
-                <family>mac</family>
-            </os>
-        </activation>
-        <dependencies>
-            <dependency>
-                <groupId>kkckkc.jsourcepad</groupId>
-                <artifactId>theme-osx</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
-            </dependency>
-        </dependencies>
-    </profile>
-
-    <profile>
-        <id>unix</id>
-        <activation>
-            <os>
-                <family>unix</family>
-            </os>
-        </activation>
-        <dependencies>
-            <dependency>
-                <groupId>kkckkc.jsourcepad</groupId>
-                <artifactId>theme-gtk</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
-            </dependency>
-        </dependencies>
-    </profile>
-
-    <profile>
-        <id>assemble</id>
-        <pluginRepositories>
-            <pluginRepository>
-                <id>Codehaus Snapshots</id>
-                <url>http://repository.codehaus.org/org/codehaus/mojo/</url>
-                <snapshots>
-                    <enabled>true</enabled>
-                </snapshots>
-                <releases>
-                    <enabled>true</enabled>
-                </releases>
-            </pluginRepository>
-        </pluginRepositories>
-
-        <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>appassembler-maven-plugin</artifactId>
-                    <version>1.1-SNAPSHOT</version>
-                    <configuration>
-                        <programs>
-                            <program>
-                                <mainClass>editor.Bootstrap</mainClass>
-                                <name>editor</name>
-                            </program>
-                        </programs>
-                        <repositoryLayout>flat</repositoryLayout>
-                        <extraJvmArguments>-Xquickstart -Xms64m -Xverify:none
-                -Xgcpolicy:gencon -Xscmx64m -Xshareclasses:keep,singleJVM -Xzero
-                -Xmn7m -Xminf0.1 -Xtrace:none -Dibm.stream.nio=true
-                        </extraJvmArguments>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
-</profiles>
-    -->
-
+    <profiles>
+        <profile>
+            <id>osx</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>kkckkc.jsourcepad</groupId>
+                    <artifactId>theme-osx</artifactId>
+                    <version>0.0.1-SNAPSHOT</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
@@ -144,11 +86,6 @@
         <dependency>
             <groupId>kkckkc.jsourcepad</groupId>
             <artifactId>theme-gtk</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>kkckkc.jsourcepad</groupId>
-            <artifactId>theme-osx</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
